<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Friends Expenses</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="csvread">Entries</string>
    <string name="csvadd">Add</string>
    <string name="csvadd_donation">Add Donation</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_groupe">Group Name</string>
    <string name="add_name">Person Name</string>
    <string name="add_title_expenditure">Add Expenditure</string>
    <string name="add_title_donation">Add Donation</string>
    <string name="add_phone">Person Phone</string>
    <string name="add_expense">Amount</string>
    <string name="add_donation">Person Donation</string>
    <string name="add_donator">Donator</string>
    <string name="add_add">Add</string>
    <string name="add_update">Update</string>
    <string name="add_validate">Validate</string>
    <string name="add_person">New Person</string>
    <string name="title_activity_expenditure">Expenditure</string>
    <string name="title_activity_donation">Donation</string>
    <string name="csv_file_dir">FriendExpenses</string>
    <string name="main_everybody">Everybody</string>
    <string name="csv_file_name">fichier.csv</string>
    <string name="title_activity_last_entries">Entries</string>
    <string name="balancetextpay">should pay</string>
    <string name="grouptextTotalExpenses">Total Expenses :</string>
    <string name="grouptextExpensesPerson">Expenses/Person :</string>
    <string name="balancetextto"> € to </string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_add_Expenditure">Expenditure</string>
    <string name="title_activity_add_Person">Person</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_central_display">CentralDisplay</string>
    <string name="add_comment">What</string>
    <string name="grouptextExpenses">Expenses</string>
    <string name="grouptextBalancing">Balancing</string>
    <string name="expenseUntitled">Untitled</string>
    <string name="menu_last_entries_new">New</string>
    <string name="menu_last_entries_edit">Edit</string>
    <string name="menu_last_entries_discard">Delete</string>
    <string name="menu_main_group_edit">Rename</string>
    <string name="menu_main_group_delete">Delete</string>
    <string name="popup_rename_group_title">Rename Group</string>
    <string name="popup_rename_group_message">Put the new name : </string>
    <string name="popup_rename_group_negative_button">Cancel</string>
    <string name="popup_rename_group_positive_button">Save</string>
    <string name="popup_delete_group_title">Delete Group</string>
    <string name="popup_delete_group_message">Are you sure you want to delete this group</string>
    <string name="popup_delete_group_negative_button">Cancel</string>
    <string name="popup_delete_group_positive_button">Delete</string>
    <string name="listview_group_message">Nothing to display</string>
    <string name="listview_everybody_message">Add an expenditure</string>
    <string name="add_expenditure_msg"> for </string>
    <string name="EUR"> €</string>
    <string name="DLR"> $</string>
    <string name="LRE"> £</string>
    <string name="to"> to </string>
    <string name="sms_body">You should </string>
    <string name="popup_info">Long click on item to send a sms</string>
    <string name="add_person_toast_ok">Created</string>
    <string name="add_expenditure_toast_ok">Created</string>
    <string name="add_person_toast_phone">This phone is already used</string>
    <string name="add_person_toast_phone_ok">This person already exists ! Impossible to change the number</string>
    <string name="add_person_toast_fail">This person already exists in this group</string>
    <string name="add_expenditure_toast_phone_ok">This person already exists ! Impossible to change the number</string>
    <string name="add_expenditure_toast_fail">This reason already exists in this group</string>
    <string name="csvall">See All</string>
    <string name="mainadapter_is_owed_from">is owed from</string>
    <string name="mainadapter_owes_to">owes to</string>
    <string name="items">items</string>
    <string name="expenseadapter_paid_by">paid by</string>
    <string name="title_activity_easter_egg">EasterEgg</string>
    <string name="settings_CSV_title">CSV</string>
    <string name="settings_CSV_file_name">Name file to use</string>
    <string name="settings_CSV_file_name_default">expenses</string>
    <string name="settings_CSV_file_default_file">Use default name</string>


</resources>
