<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_CSV_title" >
        <EditTextPreference
            android:key="settings_CSV_file_name"
            android:title="@string/settings_CSV_file_name"
            android:defaultValue="@string/settings_CSV_file_name_default"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />
        <CheckBoxPreference
            android:key="settings_CSV_file_default_file"
            android:title="@string/settings_CSV_file_default_file"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>